<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="general_settings"
        android:title="@string/general_settings">

        <ListPreference
            android:key="pref_encoding"
            android:summary="%s"
            android:title="@string/pref_encoding"
            android:dialogTitle="@string/pref_encoding"
            android:entries="@array/pref_encoding_entries"
            android:entryValues="@array/pref_encoding_values"
            android:defaultValue="@string/pref_encoding_default"
            />

        <Preference
            android:key="game_files"
            android:title="@string/game_files"
            />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_ui">
        <EditTextPreference
            android:key="pref_gamma"
            android:title="@string/pref_gamma"
            android:dialogTitle="@string/pref_gamma"
            android:inputType="numberDecimal"
            android:hint="1.0"
            />

        <ListPreference
            android:key="pref_uiScaling"
            android:title="@string/pref_uiScaling"
            android:dialogTitle="@string/pref_uiScaling_dialog_title"
            android:entries="@array/pref_uiScaling_entries"
            android:entryValues="@array/pref_uiScaling_values"
            android:defaultValue=""
            android:summary="%s"
            />

        <ListPreference
            android:key="pref_mouse_mode"
            android:title="@string/pref_mouse_mode"
            android:dialogTitle="@string/pref_mouse_mode"
            android:entries="@array/pref_mouse_mode_entries"
            android:entryValues="@array/pref_mouse_mode_values"
            android:defaultValue="@string/pref_mouse_mode_default"
            android:summary="%s"
            />

        <CheckBoxPreference
            android:key="pref_always_show_top_bar"
            android:title="@string/pref_always_show_top_bar" />

        <CheckBoxPreference
            android:key="pref_show_qp"
            android:title="@string/pref_show_qp" />

        <CheckBoxPreference
            android:key="pref_show_fn"
            android:title="@string/pref_show_fn" />

        <CheckBoxPreference
            android:key="pref_screen_keeper"
            android:title="@string/pref_screen_keeper"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/activity_vr_calibration">
        <ListPreference
            android:key="pref_vr_stance"
            android:title="@string/pref_vr_stance_title"
            android:dialogTitle="@string/pref_vr_stance_dialog_title"
            android:entries="@array/pref_vr_stance_entries"
            android:entryValues="@array/pref_vr_stance_values"
            android:defaultValue="standing"
            android:summary="%s" />

        <Preference
            android:key="pref_open_vr_calibration"
            android:title="@string/vr_calibration_title"
            android:summary="Fine-tune standing/seated height, visual preview, and IPD separation">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.openmw.vr"
                android:targetClass="ui.activity.VrCalibrationActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advanced">
        <EditTextPreference
            android:key="commandLine"
            android:title="@string/pref_commandLine"
            />
    </PreferenceCategory>

</PreferenceScreen>
